[gd_scene load_steps=4 format=3 uid="uid://bmt24cvl0nnsc"]

[ext_resource type="Script" path="res://scripts/menus/inventory/item_tooltip.gd" id="1_pdnau"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2ylkt"]
bg_color = Color(0.0588235, 0.0588235, 0.0588235, 0.941176)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.862745, 0.74902, 0.427451, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="LabelSettings" id="LabelSettings_i3uoa"]
font_size = 14
font_color = Color(0.862745, 0.74902, 0.427451, 1)

[node name="ItemTooltip" type="Panel"]
z_index = 100
custom_minimum_size = Vector2(150, 100)
offset_right = 150.0
offset_bottom = 100.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2ylkt")
script = ExtResource("1_pdnau")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="ItemName" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Item Name"
label_settings = SubResource("LabelSettings_i3uoa")

[node name="ItemType" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Item Type"
label_settings = SubResource("LabelSettings_i3uoa")

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="StatsContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4
